--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "build:spa-prod": "npm run clean:artifacts && gulp build:spa-prod --color",
     "build:universal-dev": "npm run clean:artifacts && gulp build:universal-dev --color",
     "build:universal-stage": "npm run clean:artifacts && gulp build:universal-stage --color",
-    "build:universal-prod": "npm run clean:artifacts && gulp build:universal-prod --color",
+    "build:universal-prod": "npm run clean:artifacts && gulp build:universal-prod --color  --max_old_space_size=8192",
     "serve": "nodemon ./.server/server.js",
     "serve:spa": "nodemon ./.server/spa-server.js",
     "serve:spa-hmr": "node ./.server/spa-server.hmr.js",
@@ -40,48 +40,49 @@
     "release": "standard-version && npm run docs"
   },
   "dependencies": {
-    "express": "~4.16.3",
-    "debug": "~3.1.0",
-    "compression": "~1.7.3",
-    "morgan": "~1.9.0",
-    "body-parser": "~1.18.3",
     "@angular/animations": "~6.0.9",
+    "@angular/cdk": "~6.4.1",
     "@angular/common": "~6.0.9",
     "@angular/core": "~6.0.9",
+    "@angular/flex-layout": "6.0.0-beta.16",
     "@angular/forms": "~6.0.9",
     "@angular/http": "~6.0.9",
+    "@angular/material": "~6.4.1",
     "@angular/platform-browser": "~6.0.9",
     "@angular/platform-browser-dynamic": "~6.0.9",
     "@angular/platform-server": "~6.0.9",
     "@angular/router": "~6.0.9",
-    "@angular/cdk": "~6.4.1",
-    "@angular/material": "~6.4.1",
-    "@angular/flex-layout": "6.0.0-beta.16",
-    "core-js": "~2.5.7",
-    "reflect-metadata": "~0.1.12",
-    "rxjs": "~6.2.2",
-    "rxjs-compat": "~6.2.2",
-    "zone.js": "~0.8.26",
-    "request": "~2.87.0",
-    "hammerjs": "~2.0.8",
-    "lodash": "~4.17.10",
     "@angularclass/bootloader": "~1.0.1",
-    "@ngrx/store": "~6.0.1",
     "@ngrx/effects": "~6.0.1",
+    "@ngrx/store": "~6.0.1",
     "@nguniversal/common": "~6.0.0",
     "@nguniversal/express-engine": "~6.0.0",
-    "@ngx-config/core": "~6.0.0",
-    "@ngx-config/http-loader": "~6.0.0",
+    "@ngx-auth/core": "~6.0.0",
     "@ngx-cache/core": "~6.0.0",
+    "@ngx-cache/fs-storage": "~6.0.0",
     "@ngx-cache/platform-browser": "~6.0.0",
     "@ngx-cache/platform-server": "~6.0.0",
-    "@ngx-cache/fs-storage": "~6.0.0",
-    "@ngx-auth/core": "~6.0.0",
+    "@ngx-config/core": "~6.0.0",
+    "@ngx-config/http-loader": "~6.0.0",
+    "@ngx-meta/core": "~6.0.0",
     "@ngx-translate/core": "~10.0.2",
     "@ngx-translate/http-loader": "~3.0.1",
-    "@ngx-meta/core": "~6.0.0",
+    "@swimlane/ngx-charts": "^9.0.0",
     "angulartics2": "~6.2.0",
-    "ngx-perfect-scrollbar": "~6.2.0"
+    "body-parser": "~1.18.3",
+    "compression": "~1.7.3",
+    "core-js": "~2.5.7",
+    "debug": "~3.1.0",
+    "express": "~4.16.3",
+    "hammerjs": "~2.0.8",
+    "lodash": "~4.17.10",
+    "morgan": "~1.9.0",
+    "ngx-perfect-scrollbar": "~6.2.0",
+    "reflect-metadata": "~0.1.12",
+    "request": "~2.87.0",
+    "rxjs": "~6.2.2",
+    "rxjs-compat": "~6.2.2",
+    "zone.js": "~0.8.26"
   },
   "devDependencies": {
     "nodemon": "~1.18.3",
